@@ -66,9 +66,6 @@
         <configuration>
           <source>21</source>
           <target>21</target>
-          <compilerArgs>
-            <arg>--enable-preview</arg>
-          </compilerArgs>
           <parameters>true</parameters>
         </configuration>
       </plugin>
